--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           window.OneSignal = window.OneSignal || [];
           OneSignal.push(function() {
             OneSignal.init({
-              appId: "0d38d478-a6c7-4e14-9107-76a960aa79a0",
+              appId: "f8037201-4f35-45b1-a006-8123d4962b1d",
             });
           });
         </script>
@@ -29,7 +29,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">Duy Thanh</a>
                 <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
